<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CarApp</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_details">DetailsActivity</string>
    <string name="brandlabel">"Brand : "</string>
    <string name="modellabel">"Model : "</string>
    <string name="enginelabel">"Engine : "</string>
    <string name="sixtyTimelabel">"0-60 time : "</string>
    <string name="topSpeedlabel">"Top Speed : "</string>

    <color name="black">#000000</color>
    <color name="white">#F9F8FA</color>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="request_description">Enter Vehicles you would like to see in this app.</string>
    <string name="vehicle">Vehicle Request</string>
    <string name="request">Enter Request Here</string>
    <string name="Enter">Enter</string>
    <string name="requestlist">Request List</string>
    <string name="Addcar">Add Car Information</string>
    <string name="cars">The Cars</string>
    <string name="videos">Video List</string>
    <string name="details">Car Details</string>

</resources>
