<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:id="@+id/req">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vehicle"
        android:textSize="30sp"
        android:layout_centerHorizontal="true"
        android:paddingTop="30dp"

        />

    <EditText android:id="@+id/edit_message"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:hint="@string/request"
        android:layout_alignBottom="@+id/search_btn"
        android:layout_marginLeft="50dp"
         />


    <Button
        android:id="@+id/search_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Enter"
        android:onClick="sendRequest"
        android:layout_marginTop="150dp"
        android:layout_toRightOf="@id/edit_message" />


    <TextView
        android:id="@+id/requestinfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/request_description"
        android:layout_weight="1"
        android:paddingTop="20dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/edit_message"
 />

</RelativeLayout>