<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <TextView
        android:id="@+id/brandlabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/brandlabel" />

    <TextView
        android:id="@+id/brand"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/brandlabel" />

    <TextView
        android:id="@+id/modellabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/brandlabel"
        android:text="@string/modellabel" />

    <TextView
        android:id="@+id/model"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/brand"
        android:layout_toRightOf="@+id/modellabel" />
    <TextView
        android:id="@+id/enginelabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/modellabel"
        android:text="@string/enginelabel" />

    <TextView
        android:id="@+id/engine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/model"
        android:layout_toRightOf="@+id/enginelabel" />



    <TextView
        android:id="@+id/sixtyTimelabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/enginelabel"
        android:text="@string/sixtyTimelabel" />
    <TextView
        android:id="@+id/sixtyTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/engine"
        android:layout_toRightOf="@+id/sixtyTimelabel" />

    <TextView
        android:id="@+id/topSpeedlabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sixtyTimelabel"
        android:text="@string/topSpeedlabel" />

    <TextView
        android:id="@+id/topSpeed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sixtyTime"
        android:layout_toRightOf="@+id/topSpeedlabel" />









    <ImageView
        android:id="@+id/carImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:background="#000000"
        android:padding="1dp" />

    <Button

        android:id="@+id/videobutton"
        android:text="Video"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/MapButton"
        />
    <Button

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Find Dealership"
        android:id="@+id/MapButton"
        android:onClick="startMap"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="66dp" />


</RelativeLayout>